--- a/plots/Makefile
+++ b/plots/Makefile
@@ -1,12 +1,19 @@
 YEAR_MONTH := $(shell date +%Y-%m)
+YEAR_MONTH_PREV := $(shell date -v-1m +%Y-%m)
 
 DATAFILES = ../data/gvh507x_A4C138258E2F-${YEAR_MONTH}.txt \
 	    ../data/gvh507x_A4C138E4544D-${YEAR_MONTH}.txt
 
-all:    gobee-log-${YEAR_MONTH}.pdf
+FILES = "'../data/gvh507x_A4C138258E2F-${YEAR_MONTH_PREV}.txt' '../data/gvh507x_A4C138258E2F-${YEAR_MONTH}.txt'" \
+	"'../data/gvh507x_A4C138E4544D-${YEAR_MONTH_PREV}.txt' '../data/gvh507x_A4C138E4544D-${YEAR_MONTH}.txt'"
 
-gobee-log-${YEAR_MONTH}.tex: gobee-log.gnuplot ${DATAFILES} sync
+all:    govee-${YEAR_MONTH}.pdf govee-${YEAR_MONTH_PREV}-${YEAR_MONTH}.pdf
+
+govee-${YEAR_MONTH}.tex: govee-log.gnuplot ${DATAFILES} sync
 	gnuplot -c $< $@  ${DATAFILES}
+
+govee-${YEAR_MONTH_PREV}-${YEAR_MONTH}.tex: govee.gnuplot sync
+	gnuplot -c $< $@  ${FILES}
 
 sync:
 	${MAKE} -C ../
